--- a/app/src/main/res/layout/fragment_adm_entregas.xml
+++ b/app/src/main/res/layout/fragment_adm_entregas.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="ADM ENTREGAS" />
+        android:text="LISTA DE ENTREGAS" />
 </RelativeLayout>
