--- a/app/src/main/res/layout/fragment_adm_estoque.xml
+++ b/app/src/main/res/layout/fragment_adm_estoque.xml
@@ -10,5 +10,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="LISTA DE PRODUTOS EM ESTOQUE" />
+        android:text="LISTA DE NOTAS EM ESTOQUE" />
 </FrameLayout>
