--- a/app/src/main/res/drawable/background_botao.xml
+++ b/app/src/main/res/drawable/background_botao.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="15dp"/>
-    <solid android:color="@color/colorYellow"/>
+    <solid android:color="@color/colorBlue"/>
 
 </shape>
