--- a/app/src/main/res/layout/adapter_entrega_realizada_roteirista.xml
+++ b/app/src/main/res/layout/adapter_entrega_realizada_roteirista.xml
@@ -39,6 +39,15 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/enderecoTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="@string/endereco"
+            android:textColor="@color/colorBlack"
+            android:textSize="18sp" />
+
+        <TextView
             android:id="@+id/saidaTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
