--- a/app/src/main/res/drawable/background_caixa_texto.xml
+++ b/app/src/main/res/drawable/background_caixa_texto.xml
@@ -3,6 +3,7 @@
     android:shape="rectangle">
     <corners android:radius="5dp"/>
     <solid android:color="#FFFFFF"/>
+    <stroke android:width="1dp" android:color="@color/colorBlack"/>
 
 
 </shape>
