--- a/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
+++ b/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView5"
@@ -280,12 +280,12 @@
             android:text="@string/limpar"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/salvarButtonButton"
+            app:layout_constraintEnd_toStartOf="@+id/salvarButton"
             app:layout_constraintTop_toTopOf="@+id/guideline2"
             app:layout_constraintVertical_bias="1.0" />
 
         <Button
-            android:id="@+id/salvarButtonButton"
+            android:id="@+id/salvarButton"
             android:layout_width="145dp"
             android:layout_height="35dp"
             android:layout_marginEnd="40dp"
