--- a/app/src/main/res/layout/fragment_adm_funcionarios_lista.xml
+++ b/app/src/main/res/layout/fragment_adm_funcionarios_lista.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".view.adm.ui.funcionarios.FuncionariosCadastradosFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/funcionariosRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="LISTA DE FUNCIONÁRIO" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
