--- a/app/src/main/res/layout/fragment_adm_funcionario_novo.xml
+++ b/app/src/main/res/layout/fragment_adm_funcionario_novo.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:padding="16dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -47,7 +48,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textViewNome"
+                android:id="@+id/textViewNaturezaOperacao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -70,7 +71,7 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nomeEditText" />
+                app:layout_constraintTop_toBottomOf="@+id/naturezaOperacaoEditText" />
 
             <TextView
                 android:id="@+id/textViewCPF"
@@ -112,7 +113,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/enderecoEditText" />
 
             <EditText
-                android:id="@+id/nomeEditText"
+                android:id="@+id/naturezaOperacaoEditText"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="16dp"
@@ -125,7 +126,7 @@
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewNome" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewNaturezaOperacao" />
 
             <EditText
                 android:id="@+id/rgEditText"
@@ -384,8 +385,8 @@
                 android:id="@+id/limparButton"
                 android:layout_width="145dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="32dp"
@@ -401,8 +402,8 @@
                 android:layout_width="145dp"
                 android:layout_height="35dp"
                 android:layout_marginTop="32dp"
-                android:layout_marginEnd="40dp"
-                android:layout_marginRight="40dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginRight="24dp"
                 android:layout_marginBottom="32dp"
                 android:background="@drawable/background_botao"
                 android:text="@string/salvar"
